<resources>
    <string name="default_web_client_id">405859134273-2lov6n3crj1unnd0u3hn6h1hppfs6fsj.apps.googleusercontent.com</string>
    <string name="app_name">CodeRoyale</string>
    <string name="Item_Inicio">Inicio</string>
    <string name="Item_Ejercicios">Ejercicios</string>
    <string name="Item_Cuenta">Cuenta</string>
    <string name="Item_Leaderboaard">Leaderboard</string>
    <string name="Item_Amigos">Amigos</string>

    <string name="TituloRL"> Titulo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Ingresar_email">Ingresar con email</string>
    <string name="Ingresar_google">Ingresar con google</string>

    <string name="Txt_login">Login de usuario</string>
    <string name="Et_email">Email</string>
    <string name="Et_password">Password</string>
    <string name="Btn_ingresar">Ingresar</string>
    <string name="Txt_no_cuenta">No tienes una cuenta?</string>
    <string name="Txt_registrarme">REGISTRARME</string>

    <string name="Txt_registro">Registro de usuario</string>
    <string name="Et_r_password"> Repetir contraseña </string>
    <string name="Btn_registrarme">Registrarme</string>

    <string name="Txt_perfil">Perfil de usuario</string>
    <string name="Txt_informacion">Infomación: </string>
    <string name="Txt_nombres">Nombres: </string>
    <string name="Tv_nombres">Nombres completos</string>
    <string name="Txt_email">Email:</string>">
    <string name="Tv_email">email@dominio.com</string>
    <string name="Txt_nacimiento">Fecha de nac: </string>
    <string name="Tv_nacimiento">DD/MM/AAAA</string>
    <string name="Txt_miembro">Miembro desde: </string>
    <string name="Tv_miembro">DD/MM/AAAA</string>
    <string name="Txt_telefono">Teléfono: </string>
    <string name="Tv_telefono">0123456789</string>
    <string name="Txt_estado_cuenta">Estado de cuenta: </string>
    <string name="Tv_estado_cuenta">No verificado</string>


    <string name="TxtOpciones">Opciones</string>
    <string name="Btn_editar_perfil">Editar perfil</string>
    <string name="Btn_cerrar_sesion">Cerrar sesión</string>


</resources>